tests/sumo/errors/invalid_time/options.sumo
-n net.net.xml --route-files input_routes.rou.xml --end invalidInput

